[gd_scene load_steps=4 format=2]

[ext_resource path="res://doublePaneView.gd" type="Script" id=1]
[ext_resource path="res://elements/MusicInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/Thicket.tscn" type="PackedScene" id=3]

[node name="doublePaneView" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 183.0
margin_top = 35.0
margin_right = -1.0
margin_bottom = -43.0
dragger_visibility = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="listView" type="ScrollContainer" parent="."]
margin_right = 500.0
margin_bottom = 642.0
rect_min_size = Vector2( 500, 500 )

[node name="list" type="VBoxContainer" parent="listView"]
custom_constants/separation = 0

[node name="MusicInfo" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 500.0
margin_right = 1151.0
margin_bottom = 642.0
rect_min_size = Vector2( 400, 0 )

[node name="Thicket" parent="." instance=ExtResource( 3 )]

[node name="resize_timer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="create_list" from="." to="." method="create_list"]
[connection signal="get_playlist" from="." to="." method="_on_doublePaneView_get_playlist"]
[connection signal="timeout" from="resize_timer" to="." method="_on_resize_timer_timeout"]
